--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="viewport"
             content="width=device-width, inital-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-sclae=1.0">
         <!-- 视口便签 -->
-        <link rel="stylesheet" href=".css\normal.css">
-        <link rel="stylesheet" href=".css\index.css">
-        <link rel="stylesheet" href=".css\33_css初始化.css">
+        <link rel="stylesheet" href="normal.css">
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="33_css初始化.css">
         <!-- 引入css -->
         <title>京东</title>
 
